# scilla

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  documentation_guidelines.md
core/: CMakeLists.txt  README.md
core/include/scilla/core/hal/timer/: ETimerState.h  ETimerStatus.h  ITimer.h  ITimerSubscriber.h
core/include/scilla/core/os/task/: ETaskState.h  ETaskStatus.h  ITask.h  TaskParameters.h
core/include/scilla/core/oscilloscope/adc/: EADCState.h  EADCStatus.h  IADC.h
docs/: README.md
docs/project_docs/: plan.md  status.md  test_task.md
docs/technical_docs/: software_architecture.md  solution.md  specifications.md
experiments/: README.md  conda-environment.yml  oscilloscope.ipynb
project_docs/: Test task.md  plan.md  status.md
technical_docs/: specifications.md
